--- a/web/index.html
+++ b/web/index.html
@@ -10,22 +10,13 @@
 		/>
 		<meta
 			name="description"
-			content="django-vue-admin 基于RBAC模型的权限控制的一整套基础开发平台，权限粒度达到列级别，前后端分离，后端采用django + django-rest-framework，前端采用基于 vue3 + CompositionAPI + typescript + vite + element plus"
+			content="django-vue-admin 到列级别，前后端分离，后端采用django + django-rest-framework，前端采用基于 vue3 + CompositionAPI + typescript + vite + element plus"
 		/>
 		<link rel="icon" href="/favicon.ico" />
 		<title>django-vue-admin</title>
 	</head>
 	<body>
     <div id="app"></div>
-    <script>
-        var _hmt = _hmt || [];
-        (function() {
-          var hm = document.createElement("script");
-          hm.src = "https://hm.baidu.com/hm.js?9ba8fc809b5584167a2fb9b31bb3970c";
-          var s = document.getElementsByTagName("script")[0];
-          s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
     <script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
